[gd_scene load_steps=6 format=3 uid="uid://baqpfjvmbpbx5"]

[ext_resource type="Script" path="res://monde.gd" id="1_fv6gd"]
[ext_resource type="PackedScene" uid="uid://cut1eloxi30ej" path="res://environment.tscn" id="2_0io41"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fuct3"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_0civ6"]
sky_material = SubResource("ProceduralSkyMaterial_fuct3")

[sub_resource type="Environment" id="Environment_t6usn"]
background_mode = 2
sky = SubResource("Sky_0civ6")
tonemap_mode = 2
glow_enabled = true

[node name="Monde" type="Node"]
script = ExtResource("1_fv6gd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 11.0554, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_t6usn")

[node name="Environment" parent="." instance=ExtResource("2_0io41")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuPrincipal" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 310.0
offset_top = 192.0
offset_right = -310.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MenuPrincipal"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuPrincipal/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Titre" type="Label" parent="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu Principal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HebergerBtn" type="Button" parent="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HÃ©berger"

[node name="Rejoindre" type="VBoxContainer" parent="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="InputAdresse" type="LineEdit" parent="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer/Rejoindre"]
layout_mode = 2
placeholder_text = "Adresse IP de la partie"
alignment = 1

[node name="RejoindreBtn" type="Button" parent="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer/Rejoindre"]
layout_mode = 2
text = "Rejoindre"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://voldy.tscn", "res://harry.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer/HebergerBtn" to="." method="_on_heberger_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuPrincipal/MarginContainer/VBoxContainer/Rejoindre/RejoindreBtn" to="." method="_on_rejoindre_btn_pressed"]
